--- a/app/src/main/res/layout/activity_login_almacen.xml
+++ b/app/src/main/res/layout/activity_login_almacen.xml
@@ -1,105 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:background="@color/azul"
-    android:orientation="vertical">
-
-
-
-
-    <EditText
-        android:id="@+id/editTextNombreAlmacen"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:hint="Nombre del Almacen"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"/>
-
-    <EditText
-        android:id="@+id/editTextEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/editTextNombreAlmacen"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:hint="Correo electrónico"
-        android:inputType="textEmailAddress"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"/>
-
-    <EditText
-        android:id="@+id/editTextContraseña"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/editTextEmail"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:hint="Contraseña"
-        android:inputType="textPassword"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"/>
-
-    <Button
-        android:id="@+id/buttonIniciarSesion"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/editTextContraseña"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="32dp"
-        android:text="Iniciar Sesión"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:backgroundTint="@color/rojo"/>
-
-    <TextView
-        android:id="@+id/textViewIniciarSesion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/buttonIniciarSesion"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
-        android:text="¿No tienes una cuenta?"
-        android:textColor="@color/naranja"
-        android:textStyle="bold"
-        android:textSize="15dp"/>
-
-    <Button
-        android:id="@+id/buttonRegistrarNuevoAlmacen"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textViewIniciarSesion"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="7dp"
-        android:text="Registrar Almacén"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:backgroundTint="@color/rojo"/>
+    android:orientation="vertical"
+    android:padding="10dp">
 
     <Button
         android:id="@+id/buttonLoginUsuario"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/editTextNombreAlmacen"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="209dp"
-        android:layout_marginTop="-500dp"
-        android:layout_marginEnd="2dp"
-        android:layout_marginBottom="24dp"
         android:backgroundTint="@color/rojo"
-        android:text="Usuarios"
+        android:layout_gravity="top|end"
+        android:text="Volver"
         android:textSize="16sp"
         android:textStyle="bold" />
 
-</RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="50sp"
+            android:text="Iniciar Sesión Almacén"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:layout_marginBottom="30dp"
+            />
+        <EditText
+            android:id="@+id/editTextEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/editTextNombreAlmacen"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:hint="Correo electrónico"
+            android:inputType="textEmailAddress"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"/>
+
+        <EditText
+            android:id="@+id/editTextContraseña"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/editTextEmail"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:hint="Contraseña"
+            android:inputType="textPassword"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"/>
+
+        <Button
+            android:id="@+id/buttonIniciarSesion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/editTextContraseña"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
+            android:text="Iniciar Sesión"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:backgroundTint="@color/rojo"/>
+
+        <TextView
+            android:id="@+id/textViewIniciarSesion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/buttonIniciarSesion"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="25dp"
+            android:text="¿No tienes una cuenta?"
+            android:textColor="@color/naranja"
+            android:textStyle="bold"
+            android:textSize="15dp"/>
+
+        <Button
+            android:id="@+id/buttonRegistrarNuevoAlmacen"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textViewIniciarSesion"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
+            android:text="Registrar Almacén"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:backgroundTint="@color/rojo"/>
+    </LinearLayout>
+
+
+
+</LinearLayout>
