--- a/app/src/main/res/layout/activity_main_usuario.xml
+++ b/app/src/main/res/layout/activity_main_usuario.xml
@@ -1,6 +1,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/azul">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </LinearLayout>
 
     <EditText
         android:id="@+id/edit_text_search"
@@ -10,7 +17,9 @@
         android:inputType="text"
         android:imeOptions="actionDone"
         android:layout_alignParentTop="true"
-        android:layout_margin="8dp" />
+        android:layout_margin="8dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
