--- a/app/src/main/res/layout/item_usuario_producto.xml
+++ b/app/src/main/res/layout/item_usuario_producto.xml
@@ -22,6 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
             android:text="Nombre del Almacén"
             android:textColor="@color/black"
             android:textSize="17sp" />
