Arreglos a navegación y menús
Se añaden botones de devolver y se arregla el estilos de algunos layouts

--- a/app/src/main/res/layout/activity_login_usuario.xml
+++ b/app/src/main/res/layout/activity_login_usuario.xml
@@ -90,7 +90,7 @@
         android:id="@+id/buttonLoginAlmacen"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Registrate como Punto de Venta"
+        android:text="Registrate como Almacen"
         android:layout_marginTop="8dp"
 
         android:layout_marginStart="40dp"
