--- a/app/src/main/res/layout/activity_crear_producto.xml
+++ b/app/src/main/res/layout/activity_crear_producto.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:text="Crear Producto"
             android:gravity="center"
-            android:textSize="28sp"
+            android:textSize="50sp"
             android:textStyle="bold"
             android:textColor="@color/white"/>
         <ImageView
@@ -84,6 +84,16 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="Crear Producto"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:layout_marginTop="32dp"
+            android:backgroundTint="@color/rojo"/>
+
+        <Button
+            android:id="@+id/btnCancel"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="Cancelar"
             android:textSize="16sp"
             android:textStyle="bold"
             android:layout_marginTop="32dp"
