--- a/app/src/main/res/layout/activity_main_usuario.xml
+++ b/app/src/main/res/layout/activity_main_usuario.xml
@@ -1,12 +1,32 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/azul">
+    android:background="@color/azul"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:background="@color/naranja">
+        <TextView
+            android:gravity="center"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Todos los Productos"
+            android:textSize="30sp"
+            android:textColor="@color/maroon"
+            android:textStyle="bold"
+            android:background="@color/naranja"
+            android:layout_weight="4"/>
+        <Button
+            android:id="@+id/btnSalirUsuario"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Salir"
+            android:backgroundTint="@color/rojo"
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical"/>
     </LinearLayout>
 
     <EditText
@@ -28,4 +48,4 @@
         android:layout_below="@id/edit_text_search"
         android:layout_marginTop="8dp" />
 
-</RelativeLayout>
+</LinearLayout>
